# didc

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
tests/: cli_test.rs
tests/data/: output.did  satellite.js  satellite.ts  satellite_extension.did
